Wrap NEWS -- history of user-visible changes.

Copyright (C) 1996-2016 Paul J. Lucas.
See the end of the file for license conditions.

* Changes in Wrap 4.0

** Added Markdown support.
Wrap and wrapc now have a -u option that enables wrapping of Markdown text.

* Changes in Wrap 3.3

** Added whitespace prototype option.
Wrap now has a -P option that treats the leading whitespace on the first line
as a prototype for all subsequent lines.

** Added comment-delimiters option.
In wrapc, the comment delimiter characters can now be overridden via the new -D
command-line option.

** Added special-case handling of delimited block comments.
In wrapc, delimited block comments are now handled specially in that the first
and last lines are not altered.

** Added special-case handling of non-comment lines.
In wrapc, if the first line isn't a comment, then the leading whitespace alone
is used as a prototype for subsequent lines.

** Added block characters option.
In wrapc, blocks of text started by certain characters can now delimit
paragraphs via a new -b command-line option.  This allows things like Javadoc
or Doxygen @ characters, e.g., @param, to remain on their own lines.

* Changes in Wrap 3.2

** Improved leader handling.
In wrapc, the leader used to be defined as ^[{WS}{CC}]* (where WS are
whitespace characters and CC are comment characters) but this didn't work well
with comments like " // * Bullet"; hence the leader is now defined as
^{WS}*{CC}+{WS}*.

** Now using standard sysexits exit codes.
Exit codes are now those specified by sysexits(3).

* Changes in Wrap 3.1

** Fixed extraneous trailing whitespace.
Comment lines that contained only leading whitespace and the comment delimiter
no longer have trailing whitespace added.

** Stops wrapping text upon non-comment line.
If a line is encountered that does not start with whitespace followed by
comment delimiters, it signals the end of the comment and all remaining lines
are passed through verbatim.
