@@ -234,6 +234,11 @@ or
 (Unix: LF);
 all case-insensitive.
 .TP
+.BI \-L " s"
+Specifies a string
+.I s
+that is to be prepended to every line.
+.TP
 .BI \-m " n"
 Mirrors tabs; equivalent to:
 .BI \-t n
